--- a/winSchoolMS/winSchoolMS.csproj
+++ b/winSchoolMS/winSchoolMS.csproj
@@ -155,6 +155,12 @@
     <Compile Include="frmTeacherDetailsView.Designer.cs">
       <DependentUpon>frmTeacherDetailsView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmStudentDetailsVeiw.resx">
@@ -210,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTeacherDetailsView.resx">
       <DependentUpon>frmTeacherDetailsView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
